kub-25/np-ubuntu.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-web
spec:
  podSelector:
    matchLabels:
      app: ubuntu
  policyTypes:
    - Egress
  egress: []
